@@ -1,3 +1,4 @@
-java -Djava.ext.dirs=. Attach
+#!/bin/bash
+java Attach
 echo pause
 read -n 1
